<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:id="@+id/iv_recipe_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/recipe_thumbnail_description" />

    <TextView
        android:id="@+id/tv_recipe_name"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/tv_default_recipe_name"
        android:textSize="35sp"
        android:textColor="@color/text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_steps_list"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>